# AI_Bridge

./: .dockerignore  .gitignore  README.md  db.py  docker-compose.yml  gemini_client.py  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  db.py  gemini_client.py  main.py  pyproject.toml
backend/tests/: conftest.py  test_main.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: ChatContainer.tsx  ChatInput.tsx  MessageItem.tsx  MessageList.tsx
frontend/lib/: api.ts  store.ts
frontend/types/: index.ts
